Troca da identidade do aplicativo

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ionic Conference",
-  "short_name": "Ionic Conf",
+  "name": "Troca Disco",
+  "short_name": "Troca Disco",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
